Moves strategy pattern to its own assembly - will put other patterns in this assembly for easier "building" from previous patterns.

--- a/Kritner.PatternExamples.Strategy/Kritner.PatternExamples.Strategy.csproj
+++ b/Kritner.PatternExamples.Strategy/Kritner.PatternExamples.Strategy.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Kritner.PatternExamples.Common\Kritner.PatternExamples.Common.csproj" />
+  </ItemGroup>
+
 </Project>
